--- a/day130/index.html
+++ b/day130/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Vibur" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <title>Face Control</title>
 </head>
 <body>
+    <header>
+        <h1>Face Control</h1>
+        <p>Note: the color is by default is set to 'face' you can change it by clicking on element you want to change</p>
+    </header>
     <main>
         <div class="controls">
             <div>
