--- a/day130/index.html
+++ b/day130/index.html
@@ -81,6 +81,9 @@
             </div>
         </div>
     </main>
+    <footer class="light-footer">
+        <p>Athoug Alsoughayer &copy; <span class="year">2019</span></p>
+    </footer>
 
     <script src="app.js"></script>
 </body>
