--- a/day131/index.html
+++ b/day131/index.html
@@ -8,8 +8,26 @@
   <title>Podcast Directory</title>
 </head>
 <body>
-  <main>
-
+  <main class="container">
+    <div class="scene">
+      <div class="card">
+        <div class="card-face face-front">
+          <p>Crime Junkie</p>
+          <div class="icon">
+            <img src="./svg/crime.svg" alt="genere icon" class="icon-img">
+            <span>crime</span>
+          </div>
+        </div>
+        <div class="card-face face-back">
+          <p>dedicated to giving you a true crime fix. Every Monday, Ashley Flowers will tell you about whatever crime she’s been
+          obsessing over that week in a way that sounds like you’re sitting around talking crime with your best friends.</p>
+          <div class="icon">
+            <img src="./svg/website.svg" alt="genere icon" class="icon-img">
+            <a href="">crimejunkie.com</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
     <p>Athoug Alsoughayer &copy; <span class="year">2019</span></p>
