--- a/day131/index.html
+++ b/day131/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main class="container">
-    <div class="scene">
+    <!-- <div class="scene">
       <div class="card">
         <div class="card-face face-front">
           <p>Crime Junkie</p>
@@ -27,10 +27,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </main>
   <footer>
     <p>Athoug Alsoughayer &copy; <span class="year">2019</span></p>
   </footer>
+
+  <script src="./js/data.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
