styling search feild

--- a/day131/index.html
+++ b/day131/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <input type="search" name="title" id="search">
+    <input type="search" name="title" id="search" placeholder="Search for a Podcast">
   </header>
   <main class="container"></main>
   <footer>
