--- a/day132/index.html
+++ b/day132/index.html
@@ -66,12 +66,13 @@
       <label>
         <input type="radio" name="rotate-cube-side" value="6" /> Roll 6
       </label>
-      <p>
+      <p class="checkbox-container">
         <label>
           Spin cube
           <input class="spin-cube-checkbox" type="checkbox" />
         </label>
       </p>
+
     </p>
   </main>
 
