--- a/default.html
+++ b/default.html
@@ -77,6 +77,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 134 &nbsp;</span><a href="./day134/index.html" data-linktext="Ajax Book List" class="slide_from_bottom">Ajax Book List</a></h3>
             <h3><span class="days"> Day 133 &nbsp;</span><a href="./day133/index.html" data-linktext="Flex Image Gallery"class="slide_from_bottom">Flex Image Gallery</a></h3>
             <h3><span class="days"> Day 132 &nbsp;</span><a href="./day132/index.html" data-linktext="3D Dice" class="slide_from_bottom">3D Dice</a></h3>
             <h3><span class="days"> Day 131 &nbsp;</span><a href="./day131/index.html" data-linktext="Podcast Directory" class="slide_from_bottom">Podcast Directory</a></h3>
