--- a/day134/index.html
+++ b/day134/index.html
@@ -18,7 +18,10 @@
     </form>
   </main>
 
-  <footer></footer>
+  <footer class="light-footer">
+    <p>Athoug Alsoughayer &copy; <span class="year">2019</span></p>
+  </footer>
+
   <script src="./app.js"></script>
 </body>
 </html>
