fix project link

--- a/default.html
+++ b/default.html
@@ -77,7 +77,8 @@
 
     <section>
         <div class="container">
-             <h3><span class="days"> Day 135 &nbsp;</span><a href="./day135/index.html" data-linktext="Pixel Heart" class="slide_from_bottom">Pixel Heart</a></h3>
+            <h3><span class="days"> Day 136 &nbsp;</span><a href="./day136/index.html" data-linktext="Draw Pixel" class="slide_from_bottom">Draw Pixel</a></h3>
+            <h3><span class="days"> Day 135 &nbsp;</span><a href="./day135/index.html" data-linktext="Pixel Heart" class="slide_from_bottom">Pixel Heart</a></h3>
             <h3><span class="days"> Day 134 &nbsp;</span><a href="./day134/index.html" data-linktext="Ajax Book List" class="slide_from_bottom">Ajax Book List</a></h3>
             <h3><span class="days"> Day 133 &nbsp;</span><a href="./day133/index.html" data-linktext="Flex Image Gallery"class="slide_from_bottom">Flex Image Gallery</a></h3>
             <h3><span class="days"> Day 132 &nbsp;</span><a href="./day132/index.html" data-linktext="3D Dice" class="slide_from_bottom">3D Dice</a></h3>
@@ -89,8 +90,7 @@
             <h3><span class="days"> Day 126 &nbsp;</span><a href="https://codepen.io/athoug/pen/EMXmQg" data-linktext="Gameboy" class="slide_from_bottom">Gameboy</a></h3>
             <h3><span class="days"> Day 125 &nbsp;</span><a href="../day125/index.html" data-linktext="Time Capsule" class="slide_from_bottom">Time Capsule</a></h3>
             <h3><span class="days"> Day 124 &nbsp;</span><a href="../day124/index.html" data-linktext="Drums" class="slide_from_bottom">Drums</a></h3>
-            <h3><span class="days"> Day 123 &nbsp;</span><a href="https://codepen.io/athoug/pen/jQNZEE" data-linktext="Party City | Daily CSS Challenge"
-                    class="slide_from_bottom">Party City | Daily CSS Challenge</a></h3>
+            <h3><span class="days"> Day 123 &nbsp;</span><a href="https://codepen.io/athoug/pen/jQNZEE" data-linktext="Party City | Daily CSS Challenge" class="slide_from_bottom">Party City | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 122 &nbsp;</span><a href="https://codepen.io/athoug/pen/yRmRNV" data-linktext="Dance Dance Revolution | Daily CSS Challenge"
                     class="slide_from_bottom">Dance Dance Revolution | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 121 &nbsp;</span><a href="https://codepen.io/athoug/pen/pxXVKb" data-linktext="Craft Beer | Daily CSS Challenge"
