color grid working

--- a/day136/index.html
+++ b/day136/index.html
@@ -15,6 +15,7 @@
       <label>Cols <input type="number" value="20" max="50" class="grid-control col">
       </label>
       <button class="generate-grid-btn">generate grid</button>
+      <input type="color" value="#f00060">
     </div>
     <table class="grid">
 
