--- a/default.html
+++ b/default.html
@@ -77,9 +77,10 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 138 &nbsp;</span><a href="./day138/index.html" data-linktext="Fun Canvas"
+                                class="slide_from_bottom">Fun Canvas</a></h3>
             <h3><span class="days"> Day 137 &nbsp;</span><a href="./day137/index.html" data-linktext="Pixel Pattern"
                                         class="slide_from_bottom">Pixel Pattern</a></h3>
-
             <h3><span class="days"> Day 136 &nbsp;</span><a href="./day136/index.html" data-linktext="Draw Pixel" class="slide_from_bottom">Draw Pixel</a></h3>
             <h3><span class="days"> Day 135 &nbsp;</span><a href="./day135/index.html" data-linktext="Pixel Heart" class="slide_from_bottom">Pixel Heart</a></h3>
             <h3><span class="days"> Day 134 &nbsp;</span><a href="./day134/index.html" data-linktext="Ajax Book List" class="slide_from_bottom">Ajax Book List</a></h3>
