update file content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A challenge Athoug set out for herself where she learns to program through developing projects and experimenting with different technologies ranging from HTML, CSS, JAVASCRIPT, APIs, JSON, JQUERY, NODE and diffrent libraries and frameworks.">
+    <meta name="description" content="A challenge Athoug set out for herself where she learns to program through developing projects and experimenting with different technologies ranging from HTML, CSS, JAVASCRIPT, APIs, JSON, NODE and diffrent libraries and frameworks.">
 
-    <title>Athoug's 180 days challenge</title>
+    <title>Athoug's 130 days challenge</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
@@ -66,7 +66,7 @@
         <div class="text">
             <h1>Hello There,</h1>
             <h2 id='intro'>I'm Athoug Alsoughayer and this is my</h2>
-            <h2 id='project'> <span class="days">180</span> websites in <span class="days">180</span> [somewhat] days
+            <h2 id='project'> <span class="days">130</span> websites in <span class="days">130</span> [somewhat] days
                 project.</h2>
         </div>
 
@@ -329,8 +329,8 @@
     </section>
 
     <footer>
-        <p>Athoug Alsougayer &copy; <span class="date">2016</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="default.html">Home</a>
-            &nbsp;| &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+        <p>Athoug Alsougayer &copy; <span class="date">2018</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="index.html">Home</a>
+            &nbsp;| &nbsp; <a href="http://athoug.com/">blog</a></p>
     </footer>
 
     <script type="text/javascript" src="js/script.js"></script>
