update links and copy

--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="A challenge Athoug set out for herself where she learns to program through developing projects and experimenting with different technologies ranging from HTML, CSS, JAVASCRIPT, APIs, JSON, JQUERY, NODE and diffrent libraries and frameworks.">
+        <meta name="description" content="A challenge Athoug set out for herself where she learns to program through developing projects and experimenting with different technologies ranging from HTML, CSS, JAVASCRIPT, APIs, JSON, NODE and diffrent libraries and frameworks.">
         
-        <title>Athoug's 180 days challenge</title>
+        <title>Athoug's 130 days challenge</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
@@ -48,7 +48,7 @@
 
             <nav>
                 <ul>
-                    <li id=''><i class="fa fa-user-o" aria-hidden="true"></i> <a href="default.html" class="underline_from_center">home</a></li>
+                    <li id=''><i class="fa fa-user-o" aria-hidden="true"></i> <a href="./index.html" class="underline_from_center">home</a></li>
                     <li id=''><i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/athoug" class="underline_from_center" target="_blank">github</a></li>
                     <li id=''><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
                 </ul>
@@ -59,7 +59,7 @@
         <section>
             <div class="container-about">
                 <div class="profile-image">
-                    <img src="img/athoug-black.svg" alt="athoug" />
+                    <img src="./img/athoug-black.svg" alt="athoug" />
                 </div>
 
                 <div class="about-text">
@@ -70,18 +70,18 @@
                     On another boring evening, witch turned into a turning point, I stumbled across a Quora answer. Another human
                     had the same question I had before in regards to becoming a better developer in witch a lovely human answered by 'Just start developing'.
                     His response wasn't the key, but the example he had, witch was <span><a href="https://jenniferdewalt.com/index.html" target="_blank" data-linktext="Jennifer Dewalt's" class="slide_from_left">Jennifer Dewalt's</a></span> 180 website project. It was inspiring seeing her progress, and
-                    how she taught her self to code. It made me want to start my own journey. So here I am aiming to develop 180 websites in 180 days [hopefully]
+                    how she taught her self to code. It made me want to start my own journey. So here I am aiming to develop 130 websites in 130 days [hopefully]
                     So welcome to my journey!</h3>
-                    <h3>You can follow my musings through tring to develope in my <span><a href="http://athougcodesatnight.tumblr.com/" target="_blank" data-linktext="blog" class="slide_from_left">blog</a>.</span></h3>
+                    <h3>You can follow my musings through tring to develope in my <span><a href="http://athoug.com/" target="_blank" data-linktext="blog" class="slide_from_left">blog</a>.</span></h3>
                 </div>
 
             </div>
         </section>
 
         <footer>
-            <p>Athoug Alsougayer &copy; <span class="date">2016</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+            <p>Athoug Alsougayer &copy; <span class="date">2018</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="index.html">Home</a> &nbsp;|  &nbsp; <a href="http://athoug.com/">blog</a></p>
         </footer>
 
-          <script type="text/javascript" src="js/script.js"></script>
+          <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
