--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <nav>
             <ul>
                 <li id=''><i class="fa fa-user-o" aria-hidden="true"></i>
-                    <a href="about.html" class="underline_from_center">about</a></li>
+                    <a href="./about.html" class="underline_from_center">about</a></li>
                 <li id=''><i class="fa fa-github" aria-hidden="true"></i> <a href="https://github.com/athoug" target="_blank"
                         class="underline_from_center">github</a></li>
                 <li id=''><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:athoug.s@gmail.com" class="underline_from_center">contact</a></li>
