--- a/day11/index.html
+++ b/day11/index.html
@@ -6,22 +6,22 @@
         <title>Lost Bit</title>
 
         <!-- load the javascript assets for the game-->
-        <script src="js/phaser.min.js"></script>
-        <script src="js/Boot.js"></script>
-        <script src="js/Preloader.js"></script>
-        <script src="js/MainMenu.js"></script>
-        <script src="js/Story.js"></script>
-        <script src="js/Instructions.js"></script>
-        <script src="js/puzzle2.js"></script>
-        <script src="js/LevelOne.js"></script>
-        <script src="js/LevelOneStory.js"></script>
-        <script src="js/LevelTwo.js"></script>
-        <script src="js/BossLevelStory.js"></script>
-        <script src="js/Boss.js"></script>
-        <script src="js/simon.js"></script>
-        <script src="js/GameWin.js"></script>
+        <script src="./js/phaser.min.js"></script>
+        <script src="./js/Boot.js"></script>
+        <script src="./js/Preloader.js"></script>
+        <script src="./js/MainMenu.js"></script>
+        <script src="./js/Story.js"></script>
+        <script src="./js/Instructions.js"></script>
+        <script src="./js/puzzle2.js"></script>
+        <script src="./js/LevelOne.js"></script>
+        <script src="./js/LevelOneStory.js"></script>
+        <script src="./js/LevelTwo.js"></script>
+        <script src="./js/BossLevelStory.js"></script>
+        <script src="./js/Boss.js"></script>
+        <script src="./js/simon.js"></script>
+        <script src="./js/GameWin.js"></script>
 
-        <script src="js/Enemy.js"></script>
+        <script src="./js/Enemy.js"></script>
 
 
 
