--- a/day3/find-david.html
+++ b/day3/find-david.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
         <title>Where is The Tardis</title>
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="./css/main.css">
 
     </head>
     <body>
@@ -17,13 +17,14 @@
             <p class='bold'>Time: <span id='time'>0</span>s &nbsp; &nbsp;Score: <span id='score'>0</span>
             <span id="button">Stop Game</span></p>
             <footer>
-                <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+                <p>Athoug Alsougayer &copy; <span class="date">2018</span> &nbsp; &nbsp;&nbsp; &nbsp;<a href="index.html">Home</a>
+                    &nbsp;| &nbsp; <a href="http://athoug.com/">blog</a></p>
             </footer>
         </div>
 
         <div id="tardis"></div>
 
 
-        <script src="js/script.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
