--- a/day2/weapon.html
+++ b/day2/weapon.html
@@ -6,10 +6,10 @@
         <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
         <title>Paper Rock Scissor</title>
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/responsive.css">
 
-        <script src="js/script.js"></script>
+        <script src="./js/script.js"></script>
     </head>
     <body>
         <div class="wrapper">
@@ -21,22 +21,22 @@
                 </div>
 
                 <div class="paper">
-                    <img src="img/papers.svg" alt="paper" onclick="comparison('paper')"/>
+                    <img src="./img/papers.svg" alt="paper" onclick="comparison('paper')"/>
                     <p class="speech" id="paper">Paper</p>
                 </div>
                 <div class="rock">
-                    <img src="img/rock.svg" alt="rock" onclick="comparison('rock')"/>
+                    <img src="./img/rock.svg" alt="rock" onclick="comparison('rock')"/>
                     <p class="speech" id="rock">Rock</p>
                 </div>
                 <div class="scissor">
-                    <img src="img/scissor.svg" alt="scissor" onclick="comparison('scissor')"/>
+                    <img src="./img/scissor.svg" alt="scissor" onclick="comparison('scissor')"/>
                     <p class="speech" id="scissor">Scissor</p>
                 </div>
             </div>
         </div>
 
         <footer>
-            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html">Home</a> &nbsp;|  &nbsp; <a href="http://athougcodesatnight.tumblr.com/">blog</a></p>
+            <p>Athoug Alsougayer &copy; 2016 &nbsp; &nbsp;&nbsp; &nbsp;<a href="./index.html">Home</a> &nbsp;|  &nbsp; <a href="http://athoug.com/">blog</a></p>
         </footer>
     </body>
 </html>
